# eaidk-610

./: .gitignore  AIDA-report.txt  README.md  SUMMARY.md
.github/workflows/: autobuild-eaidk610.yml  autobuild-nanppct4.yml  multi-build-eaidk610.yml
.obsidian/: appearance.json  backlink.json  workspace.json
docs/: eaidk-610开发板介绍.md  官方eaidk610源代码分析.md  相关资源获取.md  适配armbian.md
docs/eaidk-610开发板介绍/: LCD.md  启动过程.md
docs/其他/: dts.md  启动日志.md
docs/官方eaidk610源代码分析/: kernel.md  uboot.md
docs/官方eaidk610源代码分析/uboot/: .$uboot.drawio.dtmp  uboot.drawio  加载resource.img.md  加载启动参数.md  加载环境变量.md  增加lcd命令.md  如何显示bmp.md  打开DEBUG调试模式.md  按键初始化.md  点亮LED灯.md
docs/官方eaidk610源代码分析/uboot/uboot/: 加载resource.img及fdt.md
docs/适配armbian/: mipi屏幕.md  uboot适配.md
src/c/camera/: CMakeLists.txt  compile.sh  main.cpp
src/c/gpio/: CMakeLists.txt  gpio_case.cpp  gpio_case.h  gpio_common.cpp  gpio_common.h  main.cpp
src/c/iic/: CMakeLists.txt  iic_common.cpp  iic_common.h  main.cpp
src/c/play/: CMakeLists.txt  README.txt  compile.sh  demo.pcm  main.cpp
src/c/record/: CMakeLists.txt  README.txt  main.cpp
src/c/rs485/: CMakeLists.txt  main.cpp  rs485_common.cpp  rs485_common.h
src/c/spi/: CMakeLists.txt  main.cpp  spi_common.cpp  spi_common.h
src/c/ttl/: CMakeLists.txt  compile.sh  main.cpp  ttl_common.cpp
src/python/case/embedded/gpio/: gpio.py
src/python/case/embedded/iic/: iic_bme280.py
src/python/case/embedded/rs485/: uart_rs458.py
src/python/case/embedded/spi/: spi_bme280.py
src/python/case/embedded/ttl/: uart_tgs2600.py
src/python/case/speech/playsound/: playalsa.py  playsox.py
src/python/case/speech/record/: record.py
src/python/case/vision/camera/: camera.py  esp.json
src/python/platform/source/common/: esp_json.py
src/python/platform/source/speech/: README.md  esp_alsaplay.py  esp_record.py  esp_soxplay.py
src/python/platform/source/vision/: README.md  esp_camera.py
